--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Is It A Good Day To Be A Rushmead Fan?</title>
+    <meta property="og:title" content="Is It A Good Day To Be A Rushmead Fan?">
+    <meta property="og:description" content="Yes.">
+    <meta property="og:url" content="https://isitagooddaytobearushmeadfan.com/">
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <title>Is It A Good Day To Be A Rushmead Fan?</title>
     <link rel="icon" href="./favicon.png"> 
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet"> 
-    
+
     <style type="text/css">
         html, body {
             font-family: 'Open Sans', sans-serif;
