--- a/rush.html
+++ b/rush.html
@@ -59,7 +59,7 @@
     </style>
 </head>
 <body>
-    <h2 class="heading">Rusmead?</h2>
+    <h2 class="heading">Rushmead?</h2>
     <h2 class="subheading">Yes</h2>
     <img src="./rush.png" class="rush" />
 </body>
